EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==03/12/2010==
joligario: Fixed some spelling mistakes.

==03/11/2010==
Congdar: bots can now equip items with augments.  required sql:  \utils\sql\svn\1280_bot_augs.sql
Congdar: new bot command '#bot augmentitem' Allows you to augment items for your other bot classes. Your must have the Augmentation Sealer window filled.

==03/10/2010==
Derision: Begging should no longer bug the client. Still needs some work around chance/amount/skillups etc.

==03/07/2010==
Derision: Fix for temporary items on merchants appearing to increase in price.
Leere: Refinement to above and fix for purchase price of stacked items != displayed price * quantity.

==03/05/2010==
Trevius: Inspecting SoF players is now possible.
Derision: A mob corpse will now be left even if a Bot's pet does the most damage.

==03/03/2010==
Trevius: Added functionality to the EQEmu Web Tool to show IP information based on account searches.
Derision: Set Message Type for spells wearing off, experience and leadership messages so they aren't classed as 'Other' by the client chat filters.
Derision: Removed -fpermissive from zone/makefile so invalid type conversions should now cause an error rather than a warning for Linux compiles.

==03/01/2010==
Trevius: Added 2 new optional arguments to quest::gmsay(text, [color, send_to_world?]) - allows changing color and sending to world or just zone.
Trevius: Normal Saylinks should now work without requiring a target for proximity says.  Silent saylinks still require a target.
Trevius: Added a check for valid slots when moving items from 1 slot to another.
Trevius: NPCs using 2 Hand Pierce weapon models can be set to skill 99 in the prim_melee_type field of the npc_types table to show the correct attack animations and messages.

==02/26/2010==
Derision: Fix for crash in Mob::DetermineSpellTargets.